apps/cw-app/cw-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cw-app-ingress  
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: cw-app-svc # name of your cw-app service
          servicePort: 80
        path: /demo-ingress-test(/|$)(.*) # for example, path: /john-cw-app(/|$)(.*)
